k8s/ecommerce-data/network-policy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: data-allow-ecommerce-only
  namespace: ecommerce-data
spec:
  podSelector: {}
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              name: ecommerce
    - from:
        - namespaceSelector:
            matchLabels:
              name: ecommerce-data
